Import of PHLI/WebService-Nextbus-0.12 from CPAN.
gitpan-cpan-distribution: WebService-Nextbus
gitpan-cpan-version:      0.12
gitpan-cpan-path:         PHLI/WebService-Nextbus-0.12.tar.gz
gitpan-cpan-author:       PHLI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -12,3 +12,7 @@ Revision history for Perl extension WebService::Nextbus.
 
 0.11 7/14/04
 	- Cleaned up a lot of code, much better documentation, better tests
+
+0.12 7/14/04
+	- Changed some documentation to recommend use of Storable->nstore rather
+	than simply Storable->store to improve interoperability.
